tests/snapshots/snapshots__python_todo_marker.snap
---
source: tests/snapshots.rs
expression: diagnostics
---
- code: todo-marker
  severity: note
  message: "`TODO` marker"
  primary:
    file: x.py
    byte_range:
      start: 2
      end: 6
    line_start: 1
    col_start: 3
    line_end: 1
    col_end: 7
  helps:
    - address before merging or convert to a tracked issue
