tests/snapshots/snapshots__python_trailing_whitespace.snap
---
source: tests/snapshots.rs
expression: diagnostics
---
- code: trailing-whitespace
  severity: warning
  message: trailing whitespace
  primary:
    file: x.py
    byte_range:
      start: 9
      end: 12
    line_start: 1
    col_start: 10
    line_end: 1
    col_end: 13
